# methcla

./: .ci.sh  .clang-format  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  ChangeLog.md  Makefile  NOTICE  README.md  Shake_Methcla.hs  methcla-shakefile.cabal  methcla-shakefile.hs  shake  shake.cfg  shakefile.cabal  shakefile.hs  stack.yaml  stir  stirfile.cabal  stirfile.hs
client/: request.hs  request.json  runhaskell.sh  sine.hs  sources.txt  streamero-sound-engine.cabal  streamero-sound-engine.hs  streamero-sound-engine.rb  test.hs  test.json
client/Sound/: Mescaline.hs  Methcla.hs
client/Sound/LV2/: Atom.hs  Uri.hs
client/Sound/LV2/Atom/: Class.hs  Env.hs  Get.hs  Object.hs  Parser.hs  Primitive.hs  Put.hs  Test.hs  Tuple.hs  Util.hs
client/Sound/LV2/Uri/: Cache.hs
client/Streamero/: Darkice.hs  Exception.hs  Jack.hs  MonadServer.hs  Process.hs  Readline.hs  SC3.hs  Signals.hs  SoundFile.hs  Soundfile.hs
client/mhd_bcn_2012/: client.html
engine/: .gitignore  .shake.database  ChangeLog.md  Makefile  engine.cabal  shake  shakefile.cabal  shakefile.hs  stir  stirfile.cabal  stirfile.hs
engine/MescalineMobile/: MainWindow.xib  drawbuffer.cpp  drawbuffer.hpp  main.m  osc.cpp  scope.cpp  scope.hpp
engine/MescalineMobile/Classes/: EAGLView.h  EAGLView.m  MescalineMobileAppDelegate.h  MescalineMobileAppDelegate.mm
engine/MescalineMobile/MescalineMobile.xcodeproj/: project.pbxproj
engine/MescalineMobile/Methcla/: AppDelegate.h  Engine.h  Methcla-Prefix.pch  ViewController.mm
engine/Shakefile/: C.hs  Configuration.hs  Lens.hs  SourceTree.hs
engine/Shakefile/C/: Android.hs  OSX.hs  PkgConfig.hs
engine/StirFile/: Methcla.hs
engine/StirFile/Pro/: MethclaPro.hs
engine/StirFile/ProStubs/: MethclaPro.hs
engine/config/: android.cfg  common.cfg  debug.cfg  host_tests.cfg  ios.cfg  plugin.sources.cfg  release.cfg
engine/examples/icecast/: main.cpp
engine/examples/ios/Methcla/: build_methcla.sh
engine/examples/sampler/pnacl/: example.js  index.html  main.cpp
engine/examples/sampler/src/: Engine.cpp  Engine.hpp
engine/examples/thADDeus/android/: AndroidManifest.xml  ant.properties  build.xml  custom_rules.xml
engine/examples/thADDeus/pnacl/: index.html  main.cpp  manifest.json  thaddeus.js
engine/examples/thADDeus/src/: synth.cpp  synth.hpp
engine/external_libraries/: boost.rb  boost.sh  copy_boost.sh  lilv-config.h  lilv_config.h  serd-config.h  serd_config.h  sord-config.h  sord_config.h  sratom_config.h
engine/external_libraries/boost/: boost.rb
engine/external_libraries/lv2/: NEWS
engine/external_libraries/sratom/sratom/: sratom.h
engine/external_libraries/sratom/src/: sratom.c
engine/external_libraries/zix/: sem.h
engine/faust/architecture/: synth.cpp
engine/include/: oscpp  plugin.h
engine/include/methcla/: common.h  detail.hpp  engine.h  engine.hpp  file.h  file.hpp  log.h  plugin.h  plugin.hpp  types.h
engine/include/methcla/detail/: result.hpp
engine/include/methcla/lv2/: atom.hpp
engine/include/methcla/platform/: rtaudio.hpp
engine/include/methcla/plugins/: node-control.h  soundfile_api_dummy.h
engine/libs/android/: Android.mk
engine/lv2/bundles/: atom  lv2core  placement-instantiate  rt-instantiate  sine.lv2  urid
engine/platform/android/: opensl_io.c
engine/platform/jack/Mescaline/: API.cpp  API.h
engine/platform/jack/Methcla/: API.cpp  API.h
engine/platform/xcode/: build_methcla.sh  methcla_init.c
engine/platform/xcode/Methcla.xcodeproj/: project.pbxproj
engine/plugins/: disksampler_stub.cpp  node-control.cpp  patch-cable.cpp  sampler.cpp  sine.c  soundfile_api_dummy.cpp  soundfile_api_libsndfile.cpp  soundfile_api_mpg123.cpp
engine/src/Mescaline/: API.h  Audio.h  Audio.hpp  Exception.hpp  Faust.hpp  Memory.cpp  Memory.hpp
engine/src/Mescaline/Audio/: API.hpp  AudioBus.cpp  AudioBus.hpp  Client.cpp  Client.hpp  CommandEngine.hpp  Engine.cpp  Engine.h  Engine.hpp  Group.cpp  Group.hpp  Node.cpp  Node.hpp  Resource.cpp  Resource.hpp  Synth.cpp  Synth.hpp  SynthDef.cpp  SynthDef.hpp  Types.h
engine/src/Mescaline/LV2/: Atom.hpp  URIDMap.cpp  URIDMap.hpp
engine/src/Mescaline/Memory/: Manager.cpp  Manager.hpp
engine/src/Mescaline/Utility/: Hash.hpp  MessageQueue.hpp  RingBuffer.hpp  Semaphore.hpp
engine/src/Methcla/: API.cpp  API.hpp  Audio.hpp  Exception.hpp  Faust.hpp  Lilv.hpp  Memory.cpp  Memory.hpp  Platform.hpp
engine/src/Methcla/Audio/: AudioBus.cpp  AudioBus.hpp  Client.cpp  Client.hpp  Engine.cpp  Engine.hpp  Group.cpp  (+13 more)
engine/tests/: methcla_engine_tests.cpp  methcla_tests.cpp  methcla_tests.hpp  test_runner_console.cpp  test_runner_nacl.cpp
engine/tests/android/: AndroidManifest.xml  main.cpp
engine/tests/pnacl/: index.html  manifest.json
engine/tools/: Makefile  server  travis-ci-install.sh
platform/rtaudio/: CMakeLists.txt
plugins/: CMakeLists.txt  disksampler.cpp  node-control.cpp  node_control.cpp  patch-cable.cpp  patch_cable.cpp  sampler.cpp  sine.c  soundfile_api_dummy.cpp  soundfile_api_extaudiofile.cpp  soundfile_api_libsndfile.cpp  soundfile_api_mpg123.cpp
src/: CMakeLists.txt
src/Methcla/: API.cpp  API.hpp  Audio.hpp  Config.h.in  Exception.hpp  Faust.hpp  Memory.cpp  Memory.hpp  Platform.hpp  Version.h.in
src/Methcla/Audio/: AudioBus.cpp  AudioBus.hpp  DSP.c  DSP.h  Engine.cpp  Engine.hpp  EngineImpl.cpp  EngineImpl.hpp  Group.cpp  Group.hpp  MultiChannelBuffer.hpp  Node.cpp  Node.hpp  Resource.cpp  Resource.hpp  Synth.cpp  Synth.hpp  SynthDef.cpp  SynthDef.hpp
src/Methcla/Memory/: Manager.cpp  Manager.hpp
src/Methcla/Plugin/: Loader.cpp  Loader.hpp  Manager.cpp  Manager.hpp
src/Methcla/Utility/: Hash.hpp  Macros.h  MessageQueue.hpp  MessageQueueInterface.hpp  Semaphore.cpp  Semaphore.hpp  WorkerInterface.hpp
tests/: CMakeLists.txt  catch_callback_reporter.hpp  config.cpp.in  disksampler_tests.cpp  methcla_engine_tests.cpp  methcla_tests.cpp  methcla_tests.hpp  test_runner_console.cpp  test_runner_nacl.cpp
tests/android/: build.xml  main.cpp
tests/plugins/: test-support.cpp  test-support.h
tests/pnacl/: example.js
(+244 files in other folders)
