-- Copyright 2012-2013 Samplecount S.L.
--
-- Licensed under the Apache License, Version 2.0 (the "License");
-- you may not use this file except in compliance with the License.
-- You may obtain a copy of the License at
--
--     http://www.apache.org/licenses/LICENSE-2.0
--
-- Unless required by applicable law or agreed to in writing, software
-- distributed under the License is distributed on an "AS IS" BASIS,
-- WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-- See the License for the specific language governing permissions and
-- limitations under the License.

Name: methcla-shakefile
Version: 0.2
Cabal-Version: >= 1.8
Build-Type: Simple

Library
  -- Hs-Source-Dirs: dist

  Exposed-Modules:
    Shake_Methcla

  Ghc-Options: -Wall

  Build-Depends:
      base >= 4 && < 5
    , directory
    , shake >= 0.14
    , shake-language-c >= 0.10.1

Executable methcla-shakefile
  Main-Is: methcla-shakefile.hs
  Other-Modules: Shake_Methcla
  Ghc-Options: -Wall -rtsopts -threaded
  Build-Depends:
      base >= 4 && < 5
    , directory
    , shake >= 0.14
    , shake-language-c >= 0.10.1
    , unordered-containers
