Name:               streamero-sound-engine
Version:            0.1
Homepage:           http://mescaline.puesnada.es
License:            GPL-2
-- License-file:       LICENSE
Author:             Stefan Kersten
Maintainer:         sk@puesnada.es
Category:           Sound
Build-type:         Simple
Cabal-version:      >=1.2

Executable streamero-sound-engine
  Main-is:          streamero-sound-engine.hs
  Other-Modules:    Streamero.Darkice
                    Streamero.Jack
                    Streamero.Process
                    --Streamero.Readline
                    Streamero.Signals
                    Streamero.SoundFile
  GHC-Options:      -Wall -rtsopts -threaded
  Build-depends:    base >= 3 && < 5
                  , aeson >= 0.6 && < 0.7
                  , attoparsec >= 0.10 && < 0.11
                  , attoparsec-conduit >= 0.4 && < 0.5
                  , bytestring >= 0.9 && < 1.0
                  , cmdargs >= 0.9 && < 1.0
                  , cereal >= 0.3 && < 0.4
                  , cereal-conduit >= 0.5 && < 0.6
                  , conduit >= 0.4 && < 0.5
                  , data-lens >= 2.10 && < 2.11
                  , data-lens-template >= 2.1 && < 2.2
                  --, editline >= 0.2 && < 0.3
                  , explicit-exception >= 0.1 && < 0.2
                  , failure >= 0.2 && < 0.3
                  , hosc >= 0.11 && < 0.12
                  , hsc3 >= 0.11 && < 0.12
                  , hsc3-process >= 0.7
                  , hsc3-server >= 0.4
                  , hsndfile >= 0.5
                  , jack >= 0.6.2 && < 0.7
                  , lifted-base >= 0.1 && < 0.2
                  , network >= 2.3 && < 2.4
                  , network-conduit >= 0.4 && < 0.5
                  , process >= 1.1 && < 1.2
                  , reactive-banana >= 0.6 && < 0.7
                  , resourcet >= 0.3 && < 0.4
                  , split >= 0.1 && < 0.2
                  , stm >= 2.3 && < 2.4
                  , stm-chans >= 1.3 && < 1.4
                  , system-fileio >= 0.3 && < 0.4
                  , system-filepath >= 0.4 && < 0.5
                  , text >= 0.11 && < 0.12
                  , transformers >= 0.3 && < 0.4
                  , unix >= 2.5 && < 2.6
                  , Unixutils >= 1.50 && < 1.51
                  , unordered-containers >= 0.2 && < 0.3
                  , url >= 2.1 && < 2.2
