-- Copyright 2012-2013 Samplecount S.L.
-- 
-- Licensed under the Apache License, Version 2.0 (the "License");
-- you may not use this file except in compliance with the License.
-- You may obtain a copy of the License at
-- 
--     http://www.apache.org/licenses/LICENSE-2.0
-- 
-- Unless required by applicable law or agreed to in writing, software
-- distributed under the License is distributed on an "AS IS" BASIS,
-- WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-- See the License for the specific language governing permissions and
-- limitations under the License.

Name: stirfile
Version: 0.3.0
Cabal-Version: >= 1.2
Build-Type: Simple

X-Stir-Package-Dirs: external_libraries/stir
X-Stir-Sandbox: cabal-dev

Flag pro
  Description: Whether to build the pro configuration
  Default: False
  Manual: True

Executable stirfile
  Hs-Source-Dirs: .
  if flag(pro)
    Hs-Source-Dirs:
      StirFile/Pro
  else
    Hs-Source-Dirs:
      StirFile/ProStubs
  Main-Is: stirfile.hs
  Other-Modules: Paths_stirfile
  Ghc-Options: -Wall -rtsopts -threaded
  Build-Depends:
      base >= 4 && < 5
    , containers
    , directory
    , filemanip
    , filepath
    , shake >= 0.10
    , stir
