-- Copyright 2012-2013 Samplecount S.L.
-- 
-- Licensed under the Apache License, Version 2.0 (the "License");
-- you may not use this file except in compliance with the License.
-- You may obtain a copy of the License at
-- 
--     http://www.apache.org/licenses/LICENSE-2.0
-- 
-- Unless required by applicable law or agreed to in writing, software
-- distributed under the License is distributed on an "AS IS" BASIS,
-- WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-- See the License for the specific language governing permissions and
-- limitations under the License.

Name: methcla-stirfile
Version: 0.3.0
Cabal-Version: >= 1.8
Build-Type: Simple

X-Stir-Package-Dirs: external_libraries/stir
X-Stir-Sandbox: cabal

Library
  Hs-Source-Dirs: dist, StirFile

  Exposed-Modules:
    Methcla

  Other-Modules:
    Paths_methcla_stirfile

  Ghc-Options: -Wall

  Build-Depends:
      base >= 4 && < 5
    , containers
    , directory
    , filemanip
    , filepath
    , shake >= 0.10
    , stir

Executable methcla-stirfile
  Main-Is: stirfile.hs
  Ghc-Options: -Wall -rtsopts -threaded
  Build-Depends:
      base >= 4 && < 5
    , directory
    , filemanip
    , shake >= 0.10
    , stir
    , methcla-stirfile
